// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PowerLevels Container should render PowerLevels 1`] = `
<div
  className="fadeIn-page-animation"
>
  <Component
    actions={
      Object {
        "fetchPowerLevels": [MockFunction] {
          "calls": Array [
            Array [],
          ],
        },
      }
    }
    isLoading={false}
    powerLevels={
      Object {
        "isLoading": false,
      }
    }
  />
</div>
`;

exports[`PowerLevels Container should render PowerLevels with loading spinner 1`] = `
<div
  className="fadeIn-page-animation"
>
  <Component
    actions={
      Object {
        "fetchPowerLevels": [MockFunction] {
          "calls": Array [
            Array [],
          ],
        },
      }
    }
    isLoading={true}
    powerLevels={
      Object {
        "isLoading": true,
      }
    }
  />
</div>
`;
